# px-icons

./: CMakeLists.txt
autotests/: scalabletest.cpp
icons/: CMakeLists.txt  index.theme
icons-dark/: CMakeLists.txt  index.theme
